src/style.css
/* ... */
.home-index main .posts.featured .post h3 {
  font-size: 1.4em;
}

.home-index main .posts.featured ul li:nth-child(1) h3 {
  font-size: 2.1em;
}

.home-index main .posts.featured .post a {
  --underline-background-color: var(--vocabulary-neutral-color-lighter-gray);
}

.home-index main .posts.featured li:nth-of-type(1) .post a {
  --underline-background-color: white;
}

.home-index main .posts.featured li:nth-of-type(1) .post figure {
  order: initial;
}

.home-index main .posts.featured ul {
  padding: 0 var(--vocabulary-page-edges-space);
}

.home-index main .posts.featured ul li {
  grid-column: span 3;
}

.home-index main .posts.featured ul li:nth-of-type(1) {
  grid-column: span 12;

  background: white;
}

.home-index main .posts.featured ul li:nth-of-type(1) article.post {
  margin-bottom: 1em;
  padding: 4em;
}

.home-index main > footer {
  grid-column: 1 / span 11;
  display: grid;
  grid-template-columns: subgrid;
  padding-top: 3em;
  padding-bottom: 8em;

  background: var(--vocabulary-neutral-color-lighter-gray);
}

.home-index main > footer .attribution-list {
  grid-column: 2 / span 9;

  background: none;
  border: 2px solid var(--vocabulary-neutral-color-dark-gray);
}

/* faq-index context */

/* .faq-index main > header {
  display: block;
  padding: 3.7em 0;
} */

.faq-index .search-form form {
  display: flex;
  width: 100%;
  margin-top: 1em;
  margin-bottom: 1em;

  font-family: 'Source Sans Pro';
  font-style: normal;
  font-weight: 700;
  font-size: 1em;
}

.faq-index .search-form form input {
  flex: 1;
  width: 100%;
  height: 4em;
  padding: .2em 1em;

  outline: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 2px solid black;
}

.faq-index .search-form form button {
  width: 10%;

  cursor: pointer;
  background: black;
  color: white;
  border: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.faq-index main > .content {
  grid: subgrid;
  grid-column: 1 / span 11;

  display: grid;
  grid-template-columns: subgrid;

}

.faq-index main > .content > * {
  grid-column: 5 / span 3;
}

.faq-index main > .content > .toc {
  grid-column: 3 / span 7;

  display: grid;
  grid-template-columns: subgrid;
}

.faq-index .toc > h2 {
  grid-column: 3 / span 3;
}

.faq-index .toc > ul {
  grid-column: 3 / span 3;

}

.faq-index .toc > ul li {
  line-height: 1.8;
}

.faq-index .toc article.featured {
  grid-column: 1 / span 7;
  padding: 3em 4em;
  margin-bottom: 4em;
  z-index: 1000;

  background: var(--vocabulary-neutral-color-lighter-gray);
}

.faq-index .toc article.featured a {
  --underline-background-color: var(--vocabulary-neutral-color-lighter-gray);
}

.faq-index .toc article.featured > ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 2em;
  margin: 0;

  list-style: none;
  font-size: 1em;
}

.faq-index .toc article.featured  h3 {
  font-size: 1.4em;
}

.faq-index .toc article.featured  p {
  font-size: 1.2em;
}

.faq-index .toc ul.frequent-questions {
  font-size: 1em;
}


.faq-index .edit {
  display: inline-block;
  width: initial;
  /* position: absolute; */
  /* top: 0; */
  /* right: 0; */
}

.faq-index details, .faq-page details {
  margin-bottom: 2em;

  border: 2px solid var(--vocabulary-neutral-color-lighter-gray);
  border-radius: 5px;
}

.faq-index details:open summary, .faq-page details:open summary {
  margin-bottom: 1em;
}

.faq-index summary, .faq-page summary {
  padding: .2em .5em;

  background: var(--vocabulary-neutral-color-lighter-gray);

  font-size: 1.2em;
}

.faq-index summary:hover, .faq-page summary:hover {
  cursor: pointer;
}

.faq-index summary::marker, .faq-page summary::marker {
  font-size: .8em;
}


.faq-index details ul, .faq-page details ul {
  margin-left: 2em;
}

.faq-index details ul li, .faq-page details ul li {
  line-height: 1.8;
}

.faq-index main .content > h4, .faq-page main .content > h4 {
  font-family: 'Roboto Condensed';
  font-size: 1.4em;
}

.faq-index main p, .faq-page main p {
  margin-top: 0;
}

.faq-index footer, .faq-page footer {
  z-index: 1000;
}

.faq-page .breadcrumbs {
  font-family: 'Source Sans Pro';
}

.return-to-top {
  display: inline-block;
  position: absolute;
  top: 90%;
  right: 5%;
  height: 300%;
  width: 100px;

  font-family: 'Source Sans Pro';
}

.return-to-top span {
  position: fixed;
  padding-bottom: 5px;
  border-bottom: 2px solid var(--vocabulary-brand-color-dark-tomato);
}

.return-to-top span:before {
  content: '';
  position: absolute;
  left: 32%;
  top: -1em;

  font-size: 2em;
}

.return-to-top:after {
  position: absolute;
  bottom: 5%;
  left: 0;
  display: block;
  content: '';
  height: 100%;
  width: 100%;
  z-index: 500;

  background: white;
}

/* course-index, course-page contexts */
.course-index > header {
  display: none;
}

.course-index > footer {
  /* display: none; */
}

.course-page > header {
  display: none;
}

.course-page > footer {
  /* display: none; */
}

.course-embedded > header {
  display: none;
}

.course-embedded > footer {
  display: none;
}

.course-embedded nav.breadcrumbs ul, .course-page nav.breadcrumbs ul, .course-index nav.breadcrumbs ul {
  display: flex;
  margin: 0;
  justify-content: space-between;

  list-style: none;
  text-align: left;
  font-size: .9em;
}

.course-embedded nav.breadcrumbs ul li:after, .course-page nav.breadcrumbs ul li:after, .course-index nav.breadcrumbs ul li:after {
  content: '>';
  padding: 0 .5em;
}

.course-embedded nav.breadcrumbs ul li:last-child:after, .course-page nav.breadcrumbs ul li:last-child:after, .course-index nav.breadcrumbs ul li:last-child:after {
  display: none;
}

.course-page details {
  margin-bottom: 2em;

  font-family: 'Source Sans Pro';
  border: 2px solid var(--vocabulary-neutral-color-lighter-gray);
  border-radius: 5px;
}

.course-page details:open summary {
  margin-bottom: 1em;
}
/* ... */

